--- a/src/main/webapp/client.html
+++ b/src/main/webapp/client.html
@@ -2,7 +2,7 @@
 <html ng-app="main">
   <head>
     <title>Daisyfetch</title>
-    <link rel="stylesheet" href="../bower_components/bootstrap-css/css/bootstrap.css">
+    <link rel="stylesheet" href="bower_components/bootstrap-css/css/bootstrap.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -13,7 +13,7 @@
 			<p class="navbar-text">Email: {{email}}</p>
 			<ul class="nav navbar-nav navbar-right">
 				<li>
-					<a href="/auth?logout">Logout</a>
+					<a href="auth?logout">Logout</a>
 				</li>
 			</ul>
 		</nav>
@@ -23,8 +23,8 @@
   	</div>
 
   	<!-- Libs -->
-    <script src="../bower_components/angular/angular.js"></script>
-    <script src="../bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
     
     <!-- App -->
     <script src="module.js"></script>
