--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -7,8 +7,8 @@
 <body>
 
 	<h1> Please log in! </h1>
-	<a href="/Proto1/auth?login=google">Log in using google</a><br>
-	<a href="/Proto1/auth?login=facebook">Log in using facebook</a>
+	<a href="auth?login=google">Log in using google</a><br>
+	<a href="auth?login=facebook">Log in using facebook</a>
 
 </body>
 </html>
